Improve code quality
Signed-off-by: Thomas ADAM <tadam@silicom.fr>