@@ -27,7 +27,6 @@ import java.io.IOException;
 import java.io.StringWriter;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * @author Florian Dupuy <florian.dupuy at rte-france.com>
@@ -78,15 +77,17 @@ public class NetworkAreaDiagramController extends AbstractDiagramController {
 
     private static Predicate<VoltageLevel> getVoltageLevelFilter(Network network, NetworkAreaDiagramModel model, Container<?> container) {
         switch (container.getContainerType()) {
-            case NETWORK:
+            case NETWORK -> {
                 return VoltageLevelFilter.NO_FILTER;
-            case SUBSTATION:
-                List<String> vls = ((Substation) container).getVoltageLevelStream().map(VoltageLevel::getId).collect(Collectors.toList());
+            }
+            case SUBSTATION -> {
+                List<String> vls = ((Substation) container).getVoltageLevelStream().map(VoltageLevel::getId).toList();
                 return VoltageLevelFilter.createVoltageLevelsDepthFilter(network, vls, model.getDepth());
-            case VOLTAGE_LEVEL:
+            }
+            case VOLTAGE_LEVEL -> {
                 return VoltageLevelFilter.createVoltageLevelDepthFilter(network, container.getId(), model.getDepth());
-            default:
-                throw new AssertionError();
+            }
+            default -> throw new AssertionError();
         }
     }
 }
